Fix a bug: get all field of specific class in form of a list